--- a/index.html
+++ b/index.html
@@ -22,8 +22,18 @@
             <img src="images/close-menu.png" alt="close-menu" id="close-menu" onclick="closeNav()">
         </div>
     </header>
-
-
+    <section id="hero">
+        <div class="container">
+            <div class="content">
+                <h1>Discover the Essence of Smart Shopping at AuraBay</h1>
+                <p>At AuraBay, we blend quality, style, and convenience into one seamless shopping journey. Explore handpicked collections, enjoy lightning-fast delivery, and experience customer-first service — because you deserve the best every time you shop.</p>
+                <button>Explore Now</button>
+            </div>
+            <div class="image">
+                <img src="images/hero-image.png" alt="Hero Image">
+            </div>
+        </div>
+    </section>
     <script src='main.js'></script>
 </body>
 </html>
