modified index and style file add style for align content in the hero section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             <div class="content">
                 <h1>Discover the Essence of Smart Shopping at AuraBay</h1>
                 <p>At AuraBay, we blend quality, style, and convenience into one seamless shopping journey. Explore handpicked collections, enjoy lightning-fast delivery, and experience customer-first service — because you deserve the best every time you shop.</p>
-                <button>Explore Now</button>
+                <div>
+                    <button>Explore Now</button>
+                </div>
             </div>
             <div class="image">
                 <img src="images/hero-image.png" alt="Hero Image">
