Create about section with content and image also made them responsive

--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
             </div>
         </div>
     </section>
+    <section id="about">
+        <div class="container">
+            <div class="content">
+                <h2>About AuraBay – Where Style Meets Simplicity</h2>
+                <p>AuraBay was founded with a simple mission: to redefine the online shopping experience through a perfect blend of quality, convenience, and trust. In a world where choices are endless and time is limited, we aim to be the destination that customers can always rely on. Our platform offers a thoughtfully curated selection of products — from everyday essentials to unique finds — so you can shop confidently and conveniently, all in one place.</p>
+                <p>What makes AuraBay stand out is our relentless focus on customer satisfaction. Every step of the shopping journey — from exploring collections to receiving your package — is built with care. We ensure secure transactions, fast delivery, and helpful support, because we believe shopping should be smooth, stress-free, and even delightful. Whether you're a first-time visitor or a long-time customer, we’re here to make every interaction exceptional.</p>
+            </div>
+            <div class="image">
+                <img src="images/about-image.jpg" alt="About Image">
+            </div>
+        </div>
+    </section>
     <script src='main.js'></script>
 </body>
 </html>
