--- a/index.html
+++ b/index.html
@@ -48,6 +48,25 @@
             </div>
         </div>
     </section>
+    <section id="contact">
+        <div class="container">
+           <div class="content">
+                <h2>Get in Touch</h2>
+                <p>Whether you have a question, feedback, or just want to say hello — we're here to help. Reach out to us anytime!</p>
+                <form>
+                    <input type="text" placeholder="Name">
+                    <input type="email" placeholder="Email">
+                    <textarea placeholder="Message" rows="7"></textarea>
+                    <button type="submit">Send</button>
+                </form>
+           </div>
+           <div class="map">
+                <h2>Where to Find Us</h2>
+                <p>Planning to visit? Navigate to us easily with the map below.</p>
+                <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=palakkad&amp;t=p&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://embed-googlemap.com">embed google map</a></div><style>.mapouter{position:relative;text-align:right;width:100%;height:400px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:400px;}.gmap_iframe {height:400px!important;}</style></div>
+           </div>
+        </div>
+    </section>
     <script src='main.js'></script>
 </body>
 </html>
